Integrate preliminary Locations model.
- Single property requirement integration into Locations model.

--- a/.pylintrc
+++ b/.pylintrc
@@ -142,7 +142,9 @@ disable=print-statement,
         too-few-public-methods,
         unnecessary-pass,
         import-error,
-        no-name-in-module
+        no-name-in-module,
+        no-self-use,
+        no-self-argument
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
