--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
 # push the cov.xml to codecov
 # see result at https://codecov.io/gh/EndyPremier/project-deliver-api
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
