Setup Serverless and setup uvicorn and mangum.
- Integrate uvicorn and mangum to use FastAPI.
- Setup package.json and serverless.yml for serverless.
- Remove residual tmp.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 # Production
 fastapi>=0.61.1  # Async Web Framework w/ Pydantic models
 mangum>=0.10.0   # ASGI adapter to wrap FastAPI for AWS Lambda
+uvicorn>=0.12.3  # Runtime Engine required for AWS Lambda
